[package]
name = "rpc-latency"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tracing-actix-web = "0.7.10"
futures = "0.3.17"

reqwest = { version = "0.12.4", features = ["json"] }
base64 = "0.22.0"
hex = "0.4.3"
openssl-probe = "0.1.5"
prometheus = "0.13.3"
lazy_static = "1.4.0"
